Resolves tdf#126257 - Writer styles hierarchical organization

Index styles moved below Index Heading

Change-Id: I178dcb668abe225a25ce35108b1bba4a73ffa960